kubernetes/argocd/argocd-app/stateful/crowdsec-ui/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: crowdsec-web-ui
  labels:
    app: crowdsec-web-ui
spec:
  serviceName: crowdsec-web-ui
  replicas: 1
  selector:
    matchLabels:
      app: crowdsec-web-ui
  template:
    metadata:
      labels:
        app: crowdsec-web-ui
    spec:
      containers:
      - name: crowdsec-web-ui
        image: ghcr.io/theduffman85/crowdsec-web-ui:2026.7.3
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: data
          mountPath: /app/data
        resources:
          requests: {}
          limits:
            cpu: 1000m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: juicefs-sc-cloudflare-r2
      resources:
        requests:
          storage: 1Gi
