kubernetes/argocd/argocd-app/stateful/crowdsec-ui/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-web-ui
  namespace: crowdsec
  labels:
    app: crowdsec-web-ui
spec:
  selector:
    app: crowdsec-web-ui
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: ClusterIP
