kubernetes/argocd/argocd-app/stateful/crowdsec-ui/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crowdsec-web-ui
  namespace: crowdsec
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-allow-local-ip-only@kubernetescrd"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: crowdsec-ui.datrollout.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crowdsec-web-ui
            port:
              number: 3000
